<resources>
    <string name="app_name">Lap Counter Prototype</string>
    <string name="title_devices">Find Device</string>
    <string name="ble_not_supported">BLE Not Supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop_scan">Stop</string>
    <string name="unknown_device">Unnamed Device</string>
    <string name="label_name">Device Name:</string>
    <string name="label_address">MAC Address:</string>
    <string name="label_conn_state">State:</string>
    <string name="label_rssi">RSSI:</string>
    <string name="label_dist">Est. Distance</string>
    <string name="title_distance">Distance Estimation</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_connect">Connect</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="reconnected">Reconnected</string>
    <string name="no_data">No Data</string>
    <string name="label_rssi_filtered">Filtered RSSI:</string>
    <string name="label_lap_count">Lap Count:</string>
    <string name="label_threshold">Threshold abs(RSSI):</string>
    <string name="label_set_threshold">Set Threshold abs(RSSI):</string>
    <string name="hint_threshold">40</string>
    <string name="label_btn_set_threshold">Set</string>
    <string name="title_lap_count">Lap Count Test</string>
    <string name="label_sliding_window_state">Sliding Window State:</string>
    <string name="label_calibrate_instructions">Move your device to the threshold and press \"Calibrate\".</string>
    <string name="label_calibrate">Calibrate</string>
    <string name="label_connecting">Connecting...</string>
    <string name="label_device_disconnected_try_reconnect">Device disconnected. Trying to reconnect...</string>
    <string name="label_collecting_rssi_values">Collecting RSSI values...</string>
    <string name="label_stop">Stop</string>
    <string name="label_done">Done</string>
</resources>
